# backend/internal/models/announcement.go
@@ -1,0 +1,15 @@
+package models
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type Announcement struct {
+	ID        uuid.UUID
+	Message   string
+	CreatedAt time.Time
+	CreatedBy uuid.UUID
+	Active    bool
+}
